--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,11 @@
       "source": "/api-examples.html",
       "destination": "/markdown-examples.html"
     }
+  ],
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/"
+    }
   ]
 }
